--- a/src/sсss/_base.scss
+++ b/src/sсss/_base.scss
@@ -10,7 +10,7 @@ html {
 
 body {
   margin: 0;
-  background-color: $main-body-color;
+  background-color: lightcyan;
   color: black;
 }
 
@@ -38,5 +38,5 @@ li {
 
 button {
   border: none;
-  background-color: $main-body-color;
+  background-color: $main-bg-color;
 }
