--- a/src/sсss/_colors.scss
+++ b/src/sсss/_colors.scss
@@ -1,4 +1,4 @@
-$main-body-color: #f5f6fb;
+$main-bg-color: #f5f6fb;
 $orange-color: #ff6b09;
 $border-color: #e2e3e5;
 $backdrop-color: rgba(0, 0, 0, 0.7);
