--- a/src/sсss/main.scss
+++ b/src/sсss/main.scss
@@ -1,6 +1,7 @@
 @import './breackpoints';
 @import './colors';
 @import './backdrop';
+@import './modal-search';
 @import './base';
 @import './header';
 @import './footer';
