--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,5 @@
 <header class="header">
+  <!-- 1 div -->
   <div class="primary-header-div">
     <button
       class="menu-btn"
@@ -81,6 +82,20 @@
         <li class="item-nav"><span class="item-nav-span">Обмін</span></li>
       </ul>
     </div>
+
+    <div class="navigation-desktop">
+      <ul class="nav-desktop-list">
+        <li class="nav-desktop-item">Нерухомість</li>
+        <li class="nav-desktop-item">Транспорт</li>
+        <li class="nav-desktop-item">Робота</li>
+        <li class="nav-desktop-item">Електроніка</li>
+        <li class="nav-desktop-item">Бізнес та послуги</li>
+        <li class="nav-desktop-item">Відпочинок і спорт</li>
+        <li class="nav-desktop-item">Віддам безкоштовно</li>
+        <li class="nav-desktop-item">Обмін</li>
+      </ul>
+    </div>
+
     <div class="clear-filter-div">
       <button class="clear-btn" type="button">
         <svg class="clear-icon" width="20" height="20">
@@ -91,8 +106,13 @@
     </div>
   </div>
 
+  <!-- 2 div -->
   <div class="secondary-header-div">
-    <button class="search-btn-tablet" type="button">
+    <button
+      class="search-btn-tablet search-btn"
+      data-buttonsSearch
+      type="button"
+    >
       <svg class="search-icon" width="18" height="18">
         <use href="./images/sprite.svg#icon-search"></use>
       </svg>
@@ -122,7 +142,7 @@
         </buttom>
       </div>
 
-      <button class="search-btn-mobile" type="button">
+      <button class="search-btn-mobile" data-buttonsSearch type="button">
         <svg class="search-icon" width="18" height="18">
           <use href="./images/sprite.svg#icon-search"></use>
         </svg>
