--- a/src/sсss/_header.scss
+++ b/src/sсss/_header.scss
@@ -3,8 +3,6 @@
   flex-direction: row;
   align-items: center;
   background-color: $main-bg-color;
-  // justify-content: space-between;
-  // border-bottom: 1px solid $border-color;
   @media screen and (min-width: $tablet-breakpoint) {
     flex-direction: column-reverse;
     width: $tablet-breakpoint;
@@ -42,10 +40,6 @@
   align-items: center;
   padding: 5px 0px 5px 0px;
   margin-left: 20px;
-  &:hover {
-    fill: $orange-color;
-    color: $orange-color;
-  }
 }
 .clear-icon {
   margin-right: 10px;
@@ -77,15 +71,6 @@
   top: 15px;
   width: 24px;
   height: 24px;
-  // background: $main-bg-color;
-}
-.menu-btn:hover,
-.close-btn:hover,
-.search-btn-mobile:hover,
-.search-btn-tablet:hover,
-.logout-btn:hover,
-.logo:hover {
-  fill: $orange-color;
 }
 
 .search-btn-mobile {
@@ -121,12 +106,12 @@
     display: block;
   }
   &:hover {
+    cursor: pointer;
     color: black;
   }
 }
 
 .navigation {
-  // @media screen and(max-width: $desktop-breakpoint -1px) {
   position: absolute;
   top: 0;
   left: 0;
@@ -141,13 +126,21 @@
     width: 305px;
     height: 829px;
   }
-  // }
-  // @media screen and(min-width: $desktop-breakpoint) {
-  //   display: flex;
-  //   align-items: center;
-  //   justify-content: space-between;
-  //   flex-grow: 1;
-  // }
+}
+
+.nav-desktop-list {
+  display: none;
+  @media screen and(min-width: $desktop-breakpoint) {
+    display: flex;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin: 0;
+  }
+}
+
+.nav-desktop-item {
+  margin-left: 21px;
+  margin-right: 21px;
 }
 
 .item-nav {
@@ -168,19 +161,11 @@
     display: none;
   }
 }
-.item-nav-span:hover {
-  color: $orange-color;
-  fill: $orange-color;
-}
 
 .item-nav.li-user {
   display: flex;
   align-items: center;
 }
-
-// .is-open {
-//   display: block;
-// }
 
 .span-my-office {
   margin-right: 10px;
@@ -241,10 +226,6 @@
     padding-top: 5px;
     padding-bottom: 5px;
   }
-  &:hover {
-    fill: $orange-color;
-    color: $orange-color;
-  }
 }
 
 .span-user-tablet {
@@ -263,10 +244,6 @@
     height: 70px;
     padding: 23px 0px 23px 19px;
     border-left: 1px solid $border-color;
-
-    &:hover {
-      fill: $orange-color;
-    }
   }
 }
 .logout-desk-btn {
@@ -277,4 +254,20 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+
+.menu-btn:hover,
+.close-btn:hover,
+.search-btn-mobile:hover,
+.search-btn-tablet:hover,
+.logout-btn:hover,
+.logo:hover,
+.nav-desktop-item:hover,
+.item-nav-span:hover,
+.clear-btn:hover,
+.btn-user-tablet:hover,
+.logout-desktop:hover {
+  cursor: pointer;
+  fill: $orange-color;
+  color: $orange-color;
 }
