--- a/src/partials/modal-search.html
+++ b/src/partials/modal-search.html
@@ -8,13 +8,17 @@
 
     <input type="text" class="input-modal-search" placeholder="Пошук" />
 
-    <button type="button" class="btn-search-modal-search">
+    <button
+      type="button"
+      class="btn-search-modal-search"
+      data-search-modal-buuton
+    >
       <svg class="icon-search-modal-search" width="20" height="20">
         <use href="./images/sprite.svg#icon-search"></use>
       </svg>
     </button>
 
-    <p class="tex-for-bad-status">bad status</p>
+    <p class="tex-for-bad-status"></p>
   </div>
 
   <!-- <div class="modal-search">
