--- a/src/templates/card.hbs
+++ b/src/templates/card.hbs
@@ -11,7 +11,7 @@
                 <div class="card-overlay">
                     <button class="icon-favorite">
                         <svg class="icon" width="16" height="16">
-                            <use href="../images/symbol-defs.svg#icon-heart-favorite"></use>
+                            <use href="../images/sprite.svg#icon-favorite-heart"></use>
                         </svg>
                     </button>
                     <button class="icon-fullscreen">
@@ -24,7 +24,7 @@
 
             <div class="card-content">
                 <p class="product-name">{{title}}</p>
-                <div class="product-content-price">
+                <div class="card-content-price">
                     <p class="product-price">{{oldPrice}} грн</p>
                     <p class="product-presale-price">{{price}} грн</p>
                 </div>
