--- a/src/sсss/main.scss
+++ b/src/sсss/main.scss
@@ -2,6 +2,8 @@
 @import './colors';
 @import './backdrop';
 @import './modal-search';
+@import './card';
 @import './base';
 @import './header';
+@import './main-container';
 @import './footer';
