--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -27,7 +27,7 @@
           </button>
         </li>
 
-        <li class="item-nav li-dn-for-desktop li-user">
+        <li class="item-nav li-dn-for-desktop li-user" data-open-modal-auth>
           <span class="item-nav-span">
             <svg class="icon-user" width="20" height="20">
               <use href="./images/sprite.svg#icon-user"></use>
@@ -45,7 +45,7 @@
               <span class="span-my-office">Мій кабінет</span>
             </span>
 
-            <button type="button" class="logout-btn">
+            <button type="button" class="logout-btn" data-logout-btn>
               <svg class="icon-logout" width="20" height="20">
                 <use href="./images/sprite.svg#icon-logout"></use>
               </svg>
@@ -126,7 +126,7 @@
 
     <div class="desk-div-mix">
       <div class="div-user-tablet">
-        <button class="btn-user-tablet" type="button">
+        <button class="btn-user-tablet" type="button" data-open-modal-auth>
           <svg class="icon-user-tablet" width="20" height="20">
             <use href="./images/sprite.svg#icon-user"></use>
           </svg>
@@ -135,7 +135,7 @@
       </div>
 
       <div class="logout-desktop">
-        <buttom class="logout-desk-btn" type="button">
+        <buttom class="logout-desk-btn" type="button" data-logout-btn>
           <svg class="icon-logout-desk" width="20" height="20">
             <use href="./images/sprite.svg#icon-logout"></use>
           </svg>
