--- a/src/sсss/main.scss
+++ b/src/sсss/main.scss
@@ -4,6 +4,7 @@
 @import './modal-search';
 @import './madal-autorization';
 @import './modal-logout';
+@import './modal-add';
 @import './card';
 @import './base';
 @import './header';
